--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=6.0.2",
+    "django-debug-toolbar>=6.2.0",
+    "django-extensions>=4.1",
 ]
